unpackaged/main/default/objects/Rate_Line_Item__c/Rate_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Rate Line Item</label>
    <nameField>
        <displayFormat>Rate-{0000000000}</displayFormat>
        <label>Rate Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>