unpackaged/main/default/objects/Rate_Line_Item__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>This field will capture Approval Process Action</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>