unpackaged/main/default/objects/Rate_Line_Item__c/fields/Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Type__c</fullName>
    <label>Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>Banded</fullName>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
            <value>
                <fullName>Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>