unpackaged/main/default/objects/Rate_Line_Item__c/fields/Calculation_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Type_Formula__c</fullName>
    <formula>TEXT ( Calculation_Type__c )</formula>
    <label>Calculation Type Formula</label>
    <type>Text</type>
</CustomField>