unpackaged/main/default/objects/Rate_Line_Item__c/fields/Charge_to_Account_Formula__c.field-meta.xml
<CustomField>
    <fullName>Charge_to_Account_Formula__c</fullName>
    <formula>TEXT ( Charge_to_Account__c )</formula>
    <label>Charge to Account Formula</label>
    <type>Text</type>
</CustomField>