unpackaged/main/default/objects/Rate_Line_Item__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Rate Line Items</relationshipLabel>
    <relationshipName>Rate_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>