unpackaged/main/default/objects/Rate_Line_Item__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <formula>TIMEVALUE ( End_Time_Text__c+&quot;:00.000&quot; )</formula>
    <label>End Time</label>
    <type>Time</type>
</CustomField>