unpackaged/main/default/objects/Rate_Line_Item__c/fields/End_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>End_Time_Text__c</fullName>
    <formula>RIGHT(RIGHT(TEXT( Time_of_Day_Code__c ), 11),5)</formula>
    <label>End Time Text</label>
    <type>Text</type>
</CustomField>