unpackaged/main/default/objects/Rate_Line_Item__c/fields/Fixed_Amount_Adjusted_Value__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Amount_Adjusted_Value__c</fullName>
    <description>346</description>
    <label>Fixed Amount Adjusted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>