unpackaged/main/default/objects/Rate_Line_Item__c/fields/Fixed_Amount_Changed__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Amount_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>346</description>
    <label>Fixed Amount Changed?</label>
    <type>Checkbox</type>
</CustomField>