unpackaged/main/default/objects/Rate_Line_Item__c/fields/Fixed_Amount_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Amount_Prior_Value__c</fullName>
    <description>This field will store prior value of Fixed Amount and if Approval Process is reject, it will revert the old value</description>
    <label>Fixed Amount Prior Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>