unpackaged/main/default/objects/Rate_Line_Item__c/fields/Has_Overlapping_Date__c.field-meta.xml
<CustomField>
    <fullName>Has_Overlapping_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This should not be on the page layout; is used for validation rule only.</description>
    <label>Has Overlapping Date</label>
    <type>Checkbox</type>
</CustomField>