unpackaged/main/default/objects/Rate_Line_Item__c/fields/Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted Rate Line Item</label>
    <type>Checkbox</type>
</CustomField>