unpackaged/main/default/objects/Rate_Line_Item__c/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <defaultValue>false</defaultValue>
    <description>346</description>
    <label>Is New</label>
    <type>Checkbox</type>
</CustomField>