unpackaged/main/default/objects/Rate_Line_Item__c/fields/Max_Data_Range__c.field-meta.xml
<CustomField>
    <fullName>Max_Data_Range__c</fullName>
    <label>Max (Data Range)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>