unpackaged/main/default/objects/Rate_Line_Item__c/fields/Min_Data_Range__c.field-meta.xml
<CustomField>
    <fullName>Min_Data_Range__c</fullName>
    <label>Min (Data Range)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>