unpackaged/main/default/objects/Rate_Line_Item__c/fields/Pending_User__c.field-meta.xml
<CustomField>
    <fullName>Pending_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who modified record that triggers the pending.</description>
    <label>Pending User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rate_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>