unpackaged/main/default/objects/Rate_Line_Item__c/fields/Record_Id_Formula__c.field-meta.xml
<CustomField>
    <fullName>Record_Id_Formula__c</fullName>
    <formula>Id</formula>
    <label>Record Id Formula</label>
    <type>Text</type>
</CustomField>