unpackaged/main/default/objects/Rate_Line_Item__c/fields/Record_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>Record_Id_Text__c</fullName>
    <label>Record Id Text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>