unpackaged/main/default/objects/Rate_Line_Item__c/fields/Service_Type_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Picklist__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Premier RV</fullName>
            </value>
            <value>
                <fullName>Plus RV</fullName>
            </value>
            <value>
                <fullName>PLUSRV</fullName>
                <isActive>false</isActive>
                <label>PLUSRV</label>
            </value>
            <value>
                <fullName>PREMIERRV</fullName>
                <isActive>false</isActive>
                <label>PREMIERRV</label>
            </value>
            <value>
                <fullName>RV</fullName>
                <isActive>false</isActive>
                <label>RV</label>
            </value>
            <value>
                <fullName>Tow</fullName>
                <isActive>false</isActive>
                <label>Tow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>