unpackaged/main/default/objects/Rate_Line_Item__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <formula>TIMEVALUE(  Start_Time_Text__c + &quot;:00.000&quot;)</formula>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>