unpackaged/main/default/objects/Rate_Line_Item__c/fields/Start_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_Text__c</fullName>
    <formula>LEFT(RIGHT(TEXT( Time_of_Day_Code__c ), 11),5)</formula>
    <label>Start Time Text</label>
    <type>Text</type>
</CustomField>