unpackaged/main/default/objects/Rate_Line_Item__c/fields/Time_of_Day_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Day_Code_Formula__c</fullName>
    <formula>TEXT (  Time_of_Day_Code__c  )</formula>
    <label>Time of Day Code Formula</label>
    <type>Text</type>
</CustomField>