unpackaged/main/default/objects/Rate_Line_Item__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DL - Dollar Amount</fullName>
            </value>
            <value>
                <fullName>EA - Each</fullName>
            </value>
            <value>
                <fullName>GL - Gallon</fullName>
            </value>
            <value>
                <fullName>KI - Kilo</fullName>
            </value>
            <value>
                <fullName>KM - Kilometer</fullName>
            </value>
            <value>
                <fullName>LB - Pound</fullName>
            </value>
            <value>
                <fullName>LT - Litre</fullName>
            </value>
            <value>
                <fullName>ML - Mile</fullName>
            </value>
            <value>
                <fullName>MN - Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>