unpackaged/main/default/objects/Rate_Line_Item__c/fields/Unit_of_Measure_Formula__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_Formula__c</fullName>
    <formula>TEXT ( Unit_of_Measure__c )</formula>
    <label>Unit of Measure Formula</label>
    <type>Text</type>
</CustomField>