unpackaged/main/default/objects/Rate_Line_Item__c/fields/Uses_Time_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Uses_Time_of_Day__c</fullName>
    <formula>Product__r.Uses_Time_of_Day__c</formula>
    <label>Uses Time of Day?</label>
    <type>Checkbox</type>
</CustomField>