unpackaged/main/default/objects/Rate_Line_Item__c/recordTypes/Service_Item.recordType-meta.xml
<RecordType>
    <fullName>Service_Item</fullName>
    <active>true</active>
    <label>Service Item</label>
</RecordType>