unpackaged/main/default/objects/Rate_Line_Item__c/validationRules/Date_or_Data_Range_overlap.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_or_Data_Range_overlap</fullName>
    <active>true</active>
    <errorConditionFormula>Has_Overlapping_Date__c</errorConditionFormula>
    <errorMessage>Start Date, End Dates, and Data Ranges can&#39;t overlap other Rate Line Items for same Product, Service Type, and Time of Day code</errorMessage>
</ValidationRule>