unpackaged/main/default/objects/Rate_Line_Item__c/validationRules/End_Date_must_defined_if_Start_Date_is.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_defined_if_Start_Date_is</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(End_Date__c) &amp;&amp; !ISNULL(Start_Date__c)</errorConditionFormula>
    <errorMessage>If Start Date is defined, End Date cannot be null</errorMessage>
</ValidationRule>