unpackaged/main/default/objects/Rate_Line_Item__c/validationRules/Max_Data_range_must_be_defined_if_Min_Is.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Data_range_must_be_defined_if_Min_Is</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Max_Data_Range__c ) &amp;&amp; !ISNULL( Min_Data_Range__c )</errorConditionFormula>
    <errorMessage>Max Data Range must be defined if Min Data Range is filled out</errorMessage>
</ValidationRule>