unpackaged/main/default/objects/Rate_Line_Item__c/validationRules/Max_Data_Range_must_be_greater_than_Min.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Data_Range_must_be_greater_than_Min</fullName>
    <active>true</active>
    <errorConditionFormula>Max_Data_Range__c &lt;=  Min_Data_Range__c</errorConditionFormula>
    <errorDisplayField>Max_Data_Range__c</errorDisplayField>
    <errorMessage>Max Data Range must be greater than Min Data Range</errorMessage>
</ValidationRule>