unpackaged/main/default/objects/Rate_Line_Item__c/validationRules/Min_Data_Range_must_be_filled_out_if_Max.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Data_Range_must_be_filled_out_if_Max</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Min_Data_Range__c ) &amp;&amp; !ISNULL( Max_Data_Range__c )</errorConditionFormula>
    <errorMessage>Min Data Range must be filled out if Max Data Range is.</errorMessage>
</ValidationRule>