unpackaged/main/default/objects/Rate_Line_Item__c/validationRules/Rejects_Comments_are_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejects_Comments_are_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Approval_Status__c, &#39;Rejected&#39;),
  ISBLANK(Comments__c)
)</errorConditionFormula>
    <errorMessage>You must provide comments when rejecting the contract</errorMessage>
</ValidationRule>