unpackaged/main/default/objects/Rate_Line_Item__c/validationRules/Start_Date_must_be_before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_must_be_before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be before Start Date</errorMessage>
</ValidationRule>